fix: update waterfall

--- a/src/components/waterfall.less
+++ b/src/components/waterfall.less
@@ -9,3 +9,13 @@
     display: inline-block;
   }
 }
+
+.waterfall-container {
+  width: inherit;
+  display: flex;
+
+  ul {
+    list-style: none;
+    padding: 0
+  }
+}
