--- a/src/App.less
+++ b/src/App.less
@@ -1,5 +1,12 @@
 #root {
   width: 100%;
   height: 100%;
-  boxSizing: "border-box",
+  box-sizing: border-box;
+}
+
+.waterfall-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: all 300ms linear;
 }
